# smartplan_medical

./: .pre-commit-config.yaml  ADD_WAREHOUSE_FIELD.md  COMPLETE_LINK_FIELD_FIX.md  CORE_SYNC_GUIDE.md  FIELD_MAPPING_CHEATSHEET.md  FIX_CUSTOMER_NAME_ERROR.md  FIX_PHARMA_PURCHASE_CYCLE.md  FIX_WAREHOUSE_MAPPING.md  FIX_WORKSPACE_CONSOLE.py  README.md  SIMPLE_WORKSPACE_FIX.py  STOCK_UPDATE_COMPLETE_GUIDE.md  install_and_setup.sh  pyproject.toml  test_approval_system.py
apps/smartplan_medical/: README.md  dump_scripts.py  license.txt  pyproject.toml  setup.py
apps/smartplan_medical/docs/: android_setup.md  deployment_guide.md  ios_install_guide.md
apps/smartplan_medical/scripts_dump/: CLIENT_Calculate_Discount_-_SO.js  CLIENT_Customer_Balance_-_SO.js  CLIENT_Item_Stcok_-_SO.js  CLIENT_Print_-_SO.js  CLIENT_Sales_Person_-_SO.js  CLIENT_item_reserved_-_SO.js  CLIENT_stock_reservation_-_SO.js  SERVER_Stock_Reservation.py  SERVER_Stock_Reservation_-_SO.py  SERVER_Stock_Reservation_cancelled.py  SERVER_Stock_Reservation_cancelled_-_SO.py  SERVER_over_reservation.py  SERVER_over_reservation_-_SO.py
apps/smartplan_medical/smartplan_medical/: api.py  classification_pricing_api.py  fetch_new_stock.py  hooks.py  modules.txt  sales_order_events.py  setup_item_defaults.py  stock_api.py
apps/smartplan_medical/smartplan_medical/config/: desktop.py
apps/smartplan_medical/smartplan_medical/public/: offline.html
apps/smartplan_medical/smartplan_medical/smartplan_medical/: __init__.py
apps/smartplan_medical/smartplan_medical/www/: install.html  install.py  login.html  login.py  (+1 more)
(+410 files in other folders)
