[project]
name = "smartplan_medical"
authors = [
    { name = "SmartPlan Solutions", email = "dev@eg-smartplan.solutions" }
]
description = "Progressive Web App layer for ERPNext - SmartPlan Medical"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0"
erpnext = ">=15.0.0"
